security-group.tf
# security group for primary region
resource "aws_security_group" "aurora_sg" {
  name        = "${var.project_name}-aurora-sg"
  description = "Aurora security group"
  vpc_id      = aws_vpc.primary.id

  ingress {
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion_sg.id]
  }

  # Allow ECS tasks to access PostgreSQL
  ingress {
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.ecs_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# security group for dr region
resource "aws_security_group" "dr_aurora_sg" {
  provider = aws.dr

  name        = "${var.project_name}-dr-aurora-sg"
  description = "DR Aurora security group"
  vpc_id      = aws_vpc.dr.id

  ingress {
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.dr_bastion_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Add security group for primary bastion host
resource "aws_security_group" "bastion_sg" {
  name   = "${var.project_name}-bastion-sg"
  vpc_id = aws_vpc.primary.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["103.233.207.98/32"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Add security group for dr bastion host
resource "aws_security_group" "dr_bastion_sg" {
  provider = aws.dr

  name        = "${var.project_name}-dr-bastion-sg"
  description = "DR Bastion security group"
  vpc_id      = aws_vpc.dr.id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = ["103.233.207.98/32"]
  }

  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }
}

# ECS Security Group of Primary
resource "aws_security_group" "ecs_sg" {

  name = "${var.project_name}-ecs-sg"

  vpc_id = aws_vpc.primary.id

  ingress {

    from_port = 3000
    to_port   = 3000

    protocol = "tcp"

    security_groups = [
      aws_security_group.alb_sg.id
    ]
  }

  egress {

    from_port = 0
    to_port   = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }
}

# ECS Security Group of DR
resource "aws_security_group" "dr_ecs_sg" {

  provider = aws.dr

  name = "${var.project_name}-ecs-sg-dr"

  vpc_id = aws_vpc.dr.id

  ingress {

    from_port = 3000
    to_port   = 3000

    protocol = "tcp"

    security_groups = [
      aws_security_group.dr_alb_sg.id
    ]
  }

  egress {

    from_port = 0
    to_port   = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }
}

# ALB Security Group
resource "aws_security_group" "alb_sg" {

  name = "${var.project_name}-alb-sg"

  vpc_id = aws_vpc.primary.id

  ingress {

    from_port = 80
    to_port   = 80

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {

    from_port = 0
    to_port   = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }
}

# ALB Security Group for DR
resource "aws_security_group" "dr_alb_sg" {

  provider = aws.dr

  name = "${var.project_name}-dr-alb-sg"

  vpc_id = aws_vpc.dr.id

  ingress {

    from_port = 80
    to_port   = 80

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {

    from_port = 0
    to_port   = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Security group that allows HTTPS from ECS tasks
resource "aws_security_group" "vpce_sg" {
  name        = "${var.project_name}-vpce-sg"
  description = "Security group for VPC endpoints"
  vpc_id      = aws_vpc.primary.id

  ingress {
    from_port = 443
    to_port   = 443
    protocol  = "tcp"

    security_groups = [
      aws_security_group.ecs_sg.id
    ]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# ECR API Endpoint
resource "aws_vpc_endpoint" "ecr_api" {
  vpc_id            = aws_vpc.primary.id
  service_name      = "com.amazonaws.ap-south-1.ecr.api"
  vpc_endpoint_type = "Interface"

  subnet_ids = [
    aws_subnet.private_a.id,
    aws_subnet.private_b.id
  ]

  security_group_ids = [
    aws_security_group.vpce_sg.id
  ]

  private_dns_enabled = true
}

# ECR Docker Endpoint
resource "aws_vpc_endpoint" "ecr_dkr" {
  vpc_id            = aws_vpc.primary.id
  service_name      = "com.amazonaws.ap-south-1.ecr.dkr"
  vpc_endpoint_type = "Interface"

  subnet_ids = [
    aws_subnet.private_a.id,
    aws_subnet.private_b.id
  ]

  security_group_ids = [
    aws_security_group.vpce_sg.id
  ]

  private_dns_enabled = true
}

# S3 Gateway Endpoint(ECR image layar)
resource "aws_vpc_endpoint" "s3" {
  vpc_id            = aws_vpc.primary.id
  service_name      = "com.amazonaws.ap-south-1.s3"
  vpc_endpoint_type = "Gateway"

  route_table_ids = [
    aws_route_table.private.id
  ]
}

# Security group that allows HTTPS from ECS tasks at DR site
resource "aws_security_group" "dr_vpce_sg" {

  provider = aws.dr

  name        = "${var.project_name}dr-vpce-sg"
  description = "Security group for DR-VPC endpoints"
  vpc_id      = aws_vpc.dr.id

  ingress {
    from_port = 443
    to_port   = 443
    protocol  = "tcp"

    security_groups = [
      aws_security_group.dr_ecs_sg.id
    ]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# ECR API Endpoint at DR site
resource "aws_vpc_endpoint" "dr_ecr_api" {

  provider = aws.dr

  vpc_id            = aws_vpc.dr.id
  service_name      = "com.amazonaws.ap-northeast-3.ecr.api"
  vpc_endpoint_type = "Interface"

  subnet_ids = [
    aws_subnet.dr_private_a.id,
    aws_subnet.dr_private_b.id
  ]

  security_group_ids = [
    aws_security_group.dr_vpce_sg.id
  ]

  private_dns_enabled = true
}

# ECR Docker Endpoint at DR site
resource "aws_vpc_endpoint" "dr_ecr_dkr" {

  provider = aws.dr

  vpc_id            = aws_vpc.dr.id
  service_name      = "com.amazonaws.ap-northeast-3.ecr.dkr"
  vpc_endpoint_type = "Interface"

  subnet_ids = [
    aws_subnet.dr_private_a.id,
    aws_subnet.dr_private_b.id
  ]

  security_group_ids = [
    aws_security_group.dr_vpce_sg.id
  ]

  private_dns_enabled = true
}

# S3 Gateway Endpoint(ECR image layar) at DR site
resource "aws_vpc_endpoint" "dr_s3" {

  provider = aws.dr

  vpc_id            = aws_vpc.dr.id
  service_name      = "com.amazonaws.ap-northeast-3.s3"
  vpc_endpoint_type = "Gateway"

  route_table_ids = [
    aws_route_table.dr_private.id
  ]
}
